WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19995
hixie.ch : anchor Link fails with fragment identifiers inside SVG fragments.
https://bugs.webkit.org/show_bug.cgi?id=19995
Summary
hixie.ch : anchor Link fails with fragment identifiers inside SVG fragments.
Calvin Anderson
Reported
2008-07-10 16:53:34 PDT
I. Steps: ----------- 1. Launch Safari 2. Go to the URL
http://www.hixie.ch/tests/adhoc/svg/links/003.xml
II. Issue: ----------------- The test fails, When you click on Blue circle, will take you near to the Red circle. Expected - When you click, shouldn't do anything. III. Other browsers: ----------------------- IE7 : not working FF3 : not working: The window scrolls downwards Opera 9.27: ok IV. Safari nightly tested: version 3.1.1(525.17 )-
r34388
. Not working properly on Safari. V. Safari screenshot : Avalible
Attachments
Screenshot
(23.74 KB, image/png)
2008-07-10 16:53 PDT
,
Calvin Anderson
no flags
Details
reduction.zip
(843 bytes, application/octet-stream)
2008-07-10 16:53 PDT
,
Calvin Anderson
no flags
Details
Patch
(41.94 KB, patch)
2011-05-25 14:41 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(7.94 KB, patch)
2011-05-26 13:58 PDT
,
Rob Buis
zimmermann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Calvin Anderson
Comment 1
2008-07-10 16:53:35 PDT
Created
attachment 22231
[details]
Screenshot
Calvin Anderson
Comment 2
2008-07-10 16:53:37 PDT
Created
attachment 22232
[details]
reduction.zip
Nikolas Zimmermann
Comment 3
2010-07-08 02:05:34 PDT
Changed component to SVG, so it shows up in my all-svg-bugs search.
Rob Buis
Comment 4
2011-05-25 14:41:50 PDT
Created
attachment 94863
[details]
Patch
Dirk Schulze
Comment 5
2011-05-25 21:57:18 PDT
Comment on
attachment 94863
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=94863&action=review
r- because of a missing valid DRT test
> LayoutTests/svg/hixie/links/003.xml:24 > + <svg xmlns="
http://www.w3.org/2000/svg
" xmlns:xlink="
http://www.w3.org/1999/xlink
" > + height="20000" width="200"> > + <!-- Spec says that <a> can only link to animation elements, > + otherwise it is invalid; that known attributes with > + unsupported values are treated as if they hadn't been > + specified when rendering; that if the attribute is not > + specified, the effect is as if an empty value ("") was > + specified; and that an empty attribute value (xlink:href="") > + means that no link traversal occurs upon activation of the 'a' > + element. So. Nothing should happen if you click it: --> > + <a xlink:href="#test"> > + <circle cx="50" cy="50" r="50" fill="blue"/> > + </a>
Can't you write an automatic test with mousedown and check if "test" has the focus() afterwards?
Rob Buis
Comment 6
2011-05-26 13:58:35 PDT
Created
attachment 95035
[details]
Patch
Nikolas Zimmermann
Comment 7
2011-05-27 07:07:45 PDT
Comment on
attachment 95035
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=95035&action=review
Good catch, r=me.
> LayoutTests/svg/hixie/links/003.xml:17 > + window.layoutTestController.waitUntilDone(); > + window.layoutTestController.dumpAsText();
You can omit window. here, it's in the default lookup chain, not in the if() line though.
> LayoutTests/svg/hixie/links/003.xml:25 > + window.layoutTestController.notifyDone();
Ditto.
Rob Buis
Comment 8
2011-05-27 09:20:16 PDT
Committed
r87518
: <
http://trac.webkit.org/changeset/87518
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug